# finding-palindromes

./: .gitignore  .gitlab-ci.yml  ANNOUNCE  CREDITS  DEVELOPER.md  LICENSE  MAKE_NOTES  README  README.md  RELEASE_HISTORY  TODO  benchmark-reference.html  benchmark-report.html  changelog.md  fourmolu.yaml  palindromes.cabal
.gitlab/merge_request_templates/: Default.md
app/: FlagsToSettings.hs  Main.hs  Options.hs
benchmarking/: Main.hs
benchmarking/benchmarking-files/: 9-Perec.txt  README.md
benchmarking/benchmarking-files/dna-files/: xcc-genome.txt
benchmarking/benchmarking-files/text-files/: portraitartist.txt
examples/palindromes/: Damnitimmad.txt  README
profiling/: Main.hs
src/Data/Algorithms/Palindromes/: Algorithms.hs  ApproximateAlgorithm.hs  ApproximatePalindromes.hs  Combinators.hs  Couplable.hs  DNA.hs  DNAPalindromes.hs  Finders.hs  IncrementalStateGenerationWithOutputExtraction.hs  InsertionDeletionAlgorithm.hs  LinearAlgorithm.hs  Main.hs  Options.hs  Output.hs  PalEq.hs  Palindrome.hs  Palindromes.hs  PalindromesUtils.hs  PostProcessing.hs  PreProcessing.hs  QuadraticAlgorithm.hs  RangeFunctions.hs  Settings.hs  Streaming.hs  Transducers.hs  WordPalindromes.hs
src/Data/Algorithms/Palindromes/Internal/: Algorithms.hs  ApproximateAlgorithm.hs  LinearAlgorithm.hs  Output.hs  PostProcessing.hs  PreProcessing.hs  QuadraticAlgorithm.hs  RangeFunctions.hs
tests/: ExtraTestFromJohan.hs  ExtraTestFromJohan.txt  ITApproximate.hs  ITInsertionDeletion.hs  ITLinear.hs  ITQuadratic.hs  Main.hs  PalindromeMethods.hs  PalindromeProperties.hs  QuickCheckGenerators.hs  QuickCheckProperties.hs  QuickCheckSettings.hs  TestStrings.hs  UTApproximateAlgorithm.hs  UTCombinators.hs  UTCouplable.hs  UTDNAPals.hs  UTExtendPals.hs  UTFinders.hs  UTGetLeftRight.hs  UTInsertionDeletionAlgorithm.hs  UTLinearAlgorithm.hs  UTPalEq.hs  UTPalindromesUtils.hs  UTProcessing.hs  UTPunctuationPals.hs  UTQuadraticAlgorithm.hs  UTTextPals.hs  UTWordPals.hs
