name:               palindromes
version:            0.4
synopsis:           Finding palindromes in strings
homepage:           http://www.jeuring.net/homepage/palindromes/index.html
description:
  palindromes is an executable and a library which takes a file name, and
  returns information about palindromes in the file.

category:           Algorithms
copyright:          (c) 2007 - 2013 Johan Jeuring
license:            BSD3
license-file:       LICENSE
author:             Johan Jeuring
maintainer:         johan@jeuring.net
stability:          experimental
extra-source-files:
  CREDITS
  README
  RELEASE_HISTORY
  tests/Main.hs

build-type:         Simple
cabal-version:      >=1.8
tested-with:        GHC ==7.4.1

source-repository this
  type:     svn
  location: https://svn.science.uu.nl/repos/sci.jeuri101.palindromes
  tag:      0.4

--------------------------------------------------------------------------------
library
  hs-source-dirs:  src
  exposed-modules:
    Data.Algorithms.Palindromes.Algorithms
    Data.Algorithms.Palindromes.Combinators
    Data.Algorithms.Palindromes.PalEq
    Data.Algorithms.Palindromes.DNA
    Data.Algorithms.Palindromes.LinearAlgorithm
    Data.Algorithms.Palindromes.Options
    Data.Algorithms.Palindromes.Output
    Data.Algorithms.Palindromes.Palindrome
    Data.Algorithms.Palindromes.PostProcessing
    Data.Algorithms.Palindromes.PreProcessing
    Data.Algorithms.Palindromes.QuadraticAlgorithm
    Data.Algorithms.Palindromes.RangeFunctions
    Data.Algorithms.Palindromes.Settings

  build-depends:
      base        >=4.17 && <5
    , vector

executable palindromes
  main-is:        Data/Algorithms/Palindromes/Main.hs
  ghc-options:    -Wall -O2 -rtsopts -threaded
  hs-source-dirs: src
  other-modules:
    Data.Algorithms.Palindromes.Algorithms
    Data.Algorithms.Palindromes.Combinators
    Data.Algorithms.Palindromes.PalEq
    Data.Algorithms.Palindromes.DNA
    Data.Algorithms.Palindromes.LinearAlgorithm
    Data.Algorithms.Palindromes.Options
    Data.Algorithms.Palindromes.Output
    Data.Algorithms.Palindromes.Palindrome
    Data.Algorithms.Palindromes.PostProcessing
    Data.Algorithms.Palindromes.PreProcessing
    Data.Algorithms.Palindromes.QuadraticAlgorithm
    Data.Algorithms.Palindromes.RangeFunctions
    Data.Algorithms.Palindromes.Settings

  build-depends:
      base        >=4.17 && <5
    , vector

test-suite property-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Main.hs
  other-modules:
    PalindromeMethods
    PalindromeProperties
    UTCombinators
    UTPalEq
    UTDNAPals
    UTExtendPals
    UTGetLeftRight
    UTLinearAlgorithm
    UTProcessing
    UTPunctuationPals
    UTQuadraticAlgorithm
    UTTextPals
    UTWordPals
    ITLinear
    ITQuadratic

  build-depends:
      base         >=3.0  && <5
    , HUnit
    , palindromes
    , QuickCheck   >=2.14 && <3.0
    , vector

--------------------------------------------------------------------------------
