cabal-version:      3.12
name:               palindromes
version:            0.5
synopsis:           Finding palindromes in strings
homepage:           http://www.jeuring.net/homepage/palindromes/index.html
description:
  palindromes is an executable and a library which takes a file name, and
  returns information about palindromes in the file.

category:           Algorithms
copyright:          (c) 2007 - 2013 Johan Jeuring
license:            BSD-3-Clause
license-file:       LICENSE
author:             Johan Jeuring
maintainer:         johan@jeuring.net
stability:          experimental
extra-source-files:
  CREDITS
  README.md
  RELEASE_HISTORY

build-type:         Simple
tested-with:        GHC >=9.10 && <9.11

source-repository this
  type:     svn
  location: https://svn.science.uu.nl/repos/sci.jeuri101.palindromes
  tag:      0.5

--------------------------------------------------------------------------------
library
  hs-source-dirs:  src
  exposed-modules:
    Data.Algorithms.Palindromes.Algorithms
    Data.Algorithms.Palindromes.DNA
    Data.Algorithms.Palindromes.Finders
    Data.Algorithms.Palindromes.LinearAlgorithm
    Data.Algorithms.Palindromes.Options
    Data.Algorithms.Palindromes.Output
    Data.Algorithms.Palindromes.PalEq
    Data.Algorithms.Palindromes.Palindrome
    Data.Algorithms.Palindromes.PostProcessing
    Data.Algorithms.Palindromes.PreProcessing
    Data.Algorithms.Palindromes.QuadraticAlgorithm
    Data.Algorithms.Palindromes.RangeFunctions
    Data.Algorithms.Palindromes.Settings

  build-depends:
    , base    >=4.17     && <5
    , vector  >=0.13.1.0 && <0.14

executable palindromes
  main-is:        Data/Algorithms/Palindromes/Main.hs
  ghc-options:    -Wall -O2 -rtsopts -threaded
  hs-source-dirs: src
  other-modules:
    Data.Algorithms.Palindromes.Algorithms
    Data.Algorithms.Palindromes.DNA
    Data.Algorithms.Palindromes.Finders
    Data.Algorithms.Palindromes.LinearAlgorithm
    Data.Algorithms.Palindromes.Options
    Data.Algorithms.Palindromes.Output
    Data.Algorithms.Palindromes.PalEq
    Data.Algorithms.Palindromes.Palindrome
    Data.Algorithms.Palindromes.PostProcessing
    Data.Algorithms.Palindromes.PreProcessing
    Data.Algorithms.Palindromes.QuadraticAlgorithm
    Data.Algorithms.Palindromes.RangeFunctions
    Data.Algorithms.Palindromes.Settings

  build-depends:
    , base    >=4.17     && <5
    , vector  >=0.13.1.0 && <0.14

test-suite tests-palindromes
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Main.hs
  other-modules:
    ITLinear
    ITQuadratic
    PalindromeMethods
    QuickCheckGenerators
    QuickCheckProperties
    QuickCheckSettings
    UTDNAPals
    UTExtendPals
    UTFinders
    UTGetLeftRight
    UTLinearAlgorithm
    UTPalEq
    UTProcessing
    UTPunctuationPals
    UTQuadraticAlgorithm
    UTTextPals
    UTWordPals

  build-depends:
    , base         >=4.17     && <5
    , HUnit        >=1.6      && <1.7
    , palindromes  >=0.5      && <0.6
    , QuickCheck   >=2.14     && <3.0
    , vector       >=0.13.1.0 && <0.14

benchmark benchmark
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarking
  main-is:        Main.hs
  build-depends:
    , base         >=4.17 && <5
    , criterion    >=1.6  && <1.7
    , directory
    , palindromes  >=0.5  && <0.6
    , strict
